cookbooks/base_utils/files/default/firewall.rules
*nat

#ssh forwardings
-A PREROUTING -p tcp --dport 60102 -j DNAT --to-destination 192.168.1.2:22
-A PREROUTING -p tcp --dport 60103 -j DNAT --to-destination 192.168.1.3:22
-A PREROUTING -p tcp --dport 60104 -j DNAT --to-destination 192.168.1.4:22
-A PREROUTING -p tcp --dport 60105 -j DNAT --to-destination 192.168.1.5:22
-A PREROUTING -p tcp --dport 60106 -j DNAT --to-destination 192.168.1.6:22
#chef-server forwarding
-A PREROUTING -p tcp --dport 60183 -j DNAT --to-destination 192.168.1.3:60183
#piwik
-A PREROUTING -p tcp --dport 60182 -j DNAT --to-destination 192.168.1.2:8080

-A POSTROUTING -o eth0 -j MASQUERADE

COMMIT

*filter

#defaults for all chains
-P INPUT DROP
#rule needs to be refined
-P FORWARD ACCEPT
-P OUTPUT DROP

#allow all loopback traffic
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# Allows incoming and outgoing SSH, HTTP and HTTPS connections from anywhere
-A INPUT -p tcp -m multiport --dports 22,80,443 -j ACCEPT
-A OUTPUT -p tcp -m multiport --sports 22,80,443 -j ACCEPT

#Allow all icmp traffic
-A INPUT -p icmp -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT

#Allow dns traffic
-A OUTPUT -p udp --dport 53 -j ACCEPT
-A INPUT -p udp --sport 53 -j ACCEPT
-A OUTPUT -p tcp --dport 53 -j ACCEPT
-A INPUT -p tcp --sport 53 -j ACCEPT

#Allow in.tum network
-A OUTPUT -d 131.159.0.0/16 -j ACCEPT
-A INPUT -s 131.159.0.0/16 -j ACCEPT

#Allow psa internal network
-A OUTPUT -d 192.168.0.0/16 -o eth1 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -i eth1 -j ACCEPT

#aptitude servers
#security.debian.org
#-A OUTPUT -d 212.211.132.250 -j ACCEPT
#-A OUTPUT -d 195.20.242.89 -j ACCEPT
#-A OUTPUT -d 212.211.132.32 -j ACCEPT
#it's a cdn so we use the hostname
#-A OUTPUT -p tcp --dest cdn.debian.net -j ACCEPT
#dotdeb archives
-A OUTPUT -d 88.190.17.153 -j ACCEPT

COMMIT

*raw

-A PREROUTING -p tcp -m multiport --dports 80,443 -j NOTRACK
-A OUTPUT -p tcp -m multiport --sports 80,443 -j NOTRACK

COMMIT
